[gd_scene load_steps=20 format=3 uid="uid://baleelms27lam"]

[ext_resource type="PackedScene" path="res://scenes/PlayerUI/controls/force_dial/ForceDial.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cydr4afr1m1ol" path="res://scenes/Player/Player.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/World.gd" id="3"]
[ext_resource type="TileSet" path="res://scenes/Levels/MapTiles.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://du05w5f78xwh3" path="res://scenes/PlayerUI/Pause/PauseScreen.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/PlayerUI/controls/heat_dial/HeatDial.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://c4wtqsed81ix4" path="res://scenes/Animations/Teleport/TeleportScene.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/PlayerUI/controls/battery_dial/BatteryLevel.tscn" id="8"]
[ext_resource type="PackedScene" path="res://scenes/LevelObjects/SimpleLight/SimpleLight.tscn" id="9"]
[ext_resource type="PackedScene" path="res://scenes/LevelObjects/Lander/Lander.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://dqbfngx8h1y4l" path="res://scenes/PlayerUI/MissionObjectives/MissionObjectives.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://deh3icob2kyjo" path="res://scenes/LevelObjects/ElectricBarrier/ElectricBarrier.tscn" id="12"]
[ext_resource type="PackedScene" path="res://scenes/LevelObjects/ExitDoor/ExitDoor.tscn" id="13"]
[ext_resource type="PackedScene" path="res://scenes/PlayerUI/controls/shield_dial/ShieldDial.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://y5ghr7deyugp" path="res://scenes/PlayerUI/DeathNotice/DeathNotice.tscn" id="15"]
[ext_resource type="PackedScene" path="res://scenes/LevelObjects/Lander/DataTransfer/LanderDataTransfer.tscn" id="16"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;

uniform vec4 color : source_color = vec4(0.35, 0.48, 0.95, 1.0);
uniform float noise_scale = 20.0;
uniform float alpha_power = 2.0;
uniform int OCTAVES = 1;
uniform float TIME_FACTOR = 1.0;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(56, 78)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * noise_scale;
	float abs_time = TIME * TIME_FACTOR;
	vec2 motion = vec2( fbm(coord + vec2(abs_time * -0.5, abs_time * 0.5)) );
	float final = fbm(coord + motion);
	COLOR = vec4(color.rgb, pow(final, alpha_power) * color.a);
}"

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/color = Color(0.3, 0.261, 0.222, 1)
shader_parameter/noise_scale = 3.0
shader_parameter/alpha_power = 2.0
shader_parameter/OCTAVES = 3
shader_parameter/TIME_FACTOR = 0.3

[sub_resource type="NoiseTexture2D" id="3"]
seamless = true
bump_strength = 7.8

[node name="World" type="Node2D"]
script = ExtResource("3")

[node name="Background" type="Polygon2D" parent="."]
material = SubResource("2")
texture = SubResource("3")
polygon = PackedVector2Array(384, -384, 640, -384, 640, 768, 768, 768, 768, 896, 896, 896, 896, 1280, 768, 1408, 0, 1408, 0, 1920, 256, 1920, 384, 2048, 512, 2048, 640, 1920, 768, 1920, 768, 1792, 1664, 1792, 1664, 2304, 640, 2304, 512, 2176, 384, 2176, 256, 2304, -512, 2304, -512, 1152, -128, 1152, -128, 896, 128, 896, 256, 768, 384, 768)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ForceDial" parent="UILayer" instance=ExtResource("1")]
position = Vector2(50, 550)

[node name="HeatDial" parent="UILayer" instance=ExtResource("6")]
position = Vector2(120, 550)

[node name="BatteryLevel" parent="UILayer" instance=ExtResource("8")]
position = Vector2(20, 20)

[node name="ShieldDial" parent="UILayer" instance=ExtResource("14")]
position = Vector2(652, 20)

[node name="MissionObjectives" parent="UILayer" instance=ExtResource("11")]

[node name="PauseScreen" parent="UILayer" instance=ExtResource("5")]

[node name="DeathNotice" parent="UILayer" instance=ExtResource("15")]

[node name="LanderDataTransfer" parent="UILayer" instance=ExtResource("16")]
visible = false
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="MapTiles" type="TileMap" parent="."]
tile_set = ExtResource("4")
format = 2
layer_0/tile_data = PackedInt32Array(-458747, 4, 0, -458742, 5, 0, -393211, 1, 0, -393206, 2, 0, -262139, 1, 0, -262134, 2, 0, -131067, 1, 0, -131062, 2, 0, 5, 1, 0, 10, 2, 0, 131077, 1, 0, 131082, 2, 0, 262149, 1, 0, 262154, 2, 0, 393221, 1, 0, 393226, 2, 0, 524293, 1, 0, 524298, 2, 0, 655364, 11, 0, 655370, 12, 0, 720899, 4, 0, 720908, 5, 0, 786434, 15, 0, 786444, 12, 0, 917501, 4, 0, 917502, 0, 0, 851968, 0, 0, 851982, 5, 0, 983037, 1, 0, 917518, 2, 0, 1114108, 11, 0, 1048590, 2, 0, 1179639, 4, 0, 1179640, 0, 0, 1179642, 0, 0, 1245175, 1, 0, 1179662, 2, 0, 1376247, 1, 0, 1310732, 17, 0, 1310734, 18, 0, 1507319, 1, 0, 1441792, 13, 0, 1441794, 19, 0, 1441796, 19, 0, 1441798, 19, 0, 1441800, 19, 0, 1441802, 19, 0, 1441804, 6, 0, 1638391, 1, 0, 1572864, 2, 0, 1769463, 1, 0, 1703936, 2, 0, 1769483, 4, 0, 1769484, 0, 0, 1769486, 0, 0, 1769488, 0, 0, 1769490, 0, 0, 1769492, 0, 0, 1769494, 0, 0, 1769496, 0, 0, 1769498, 5, 0, 1900535, 1, 0, 1835008, 12, 0, 1835018, 11, 0, 1835034, 2, 0, 1900546, 0, 0, 1900548, 5, 0, 1900553, 4, 0, 2031607, 1, 0, 1966084, 16, 0, 1966088, 15, 0, 1966106, 2, 0, 2031622, 0, 0, 2162679, 1, 0, 2097178, 2, 0, 2293751, 1, 0, 2228228, 17, 0, 2228230, 19, 0, 2228232, 14, 0, 2228250, 2, 0, 2424823, 3, 0, 2424824, 19, 0, 2424826, 19, 0, 2424828, 19, 0, 2424830, 19, 0, 2359296, 19, 0, 2359298, 19, 0, 2359300, 18, 0, 2359305, 3, 0, 2359306, 19, 0, 2359308, 19, 0, 2359310, 19, 0, 2359312, 19, 0, 2359314, 19, 0, 2359316, 19, 0, 2359318, 19, 0, 2359320, 19, 0, 2359322, 18, 0)

[node name="ExitDoor" parent="." instance=ExtResource("13")]
position = Vector2(384, -288)

[node name="Lights" type="Node2D" parent="."]

[node name="SimpleLight" parent="Lights" instance=ExtResource("9")]
position = Vector2(896, 1152)
rotation = 4.71239
cycle_length = 3.0
strength = 2.0
max_variation = 0.03
direction = 2

[node name="SimpleLight2" parent="Lights" instance=ExtResource("9")]
position = Vector2(0, 896)
rotation = 3.14159
cycle_length = 3.0
strength = 1.5
max_variation = 0.03
direction = 1

[node name="SimpleLight3" parent="Lights" instance=ExtResource("9")]
position = Vector2(-512, 2048)
rotation = 1.5708
cycle_length = 3.0
strength = 1.5
max_variation = 0.03
direction = 3

[node name="SimpleLight5" parent="Lights" instance=ExtResource("9")]
position = Vector2(-512, 1536)
rotation = 1.5708
cycle_length = 3.0
strength = 1.5
max_variation = 0.03
direction = 3

[node name="SimpleLight4" parent="Lights" instance=ExtResource("9")]
position = Vector2(192, 1920)
rotation = 3.14159
cycle_length = 3.0
strength = 1.5
max_variation = 0.03
direction = 1

[node name="SimpleLight9" parent="Lights" instance=ExtResource("9")]
position = Vector2(704, 1920)
rotation = 3.14159
cycle_length = 3.0
strength = 1.5
max_variation = 0.03
direction = 1

[node name="SimpleLight10" parent="Lights" instance=ExtResource("9")]
position = Vector2(704, 2304)
cycle_length = 3.0
strength = 1.5
max_variation = 0.03

[node name="SimpleLight6" parent="Lights" instance=ExtResource("9")]
position = Vector2(192, 2304)
cycle_length = 3.0
strength = 1.5
max_variation = 0.03

[node name="SimpleLight7" parent="Lights" instance=ExtResource("9")]
position = Vector2(1408, 2304)
cycle_length = 3.0
strength = 1.5
max_variation = 0.03

[node name="SimpleLight8" parent="Lights" instance=ExtResource("9")]
position = Vector2(1152, 2304)
cycle_length = 3.0
strength = 1.5
max_variation = 0.03

[node name="TeleportScene" parent="." instance=ExtResource("7")]

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(512, 896)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.1, 1.1)
position_smoothing_enabled = true

[node name="Doors" type="Node2D" parent="."]

[node name="ElectricBarrier" parent="Doors" instance=ExtResource("12")]
position = Vector2(448, 2112)

[node name="Lander" parent="." instance=ExtResource("10")]
position = Vector2(1224, 2304)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.545098, 0.423529, 0.32549, 1)

[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
[connection signal="electric_contact_end" from="Doors/ElectricBarrier" to="Player" method="_on_ElectricBarrier_electric_contact_end"]
[connection signal="electric_contact_start" from="Doors/ElectricBarrier" to="Player" method="_on_ElectricBarrier_electric_contact_start"]
